Version 2.2.7 - Skookumchuck
----------------------------------
Core - General
  - Change internal CSRF variable name
  - Fix object insertion bug via deserialize in LoginOperations 
  - Fix issue where login cookie contents could be forged by determining the hashing salt

FileManager v1.6.6
  - No longer allow uploading files with names that end in .

FilePicker v1.0.2
  - No longer allow uploading files with names that end in .

Search v1.51.4
  - Minor fix to microtime calls.

Version 2.2.6 - Come by Chance
----------------------------------
Core - General
  - Fixes to AdminAlerts::load_by_name()
  - SetMessage() and SetError() in the module API now use session variables
  - Remove support for module_error and module_action request parameters in admin module actions.
  - Add call to check_login() in admin actions that were missing them.

Search v1.51.3
  - Fix notice in PHP 7.1: A non well formed numeric value encountered...


Version 2.2.5 - Wawa
----------------------------------
Core - General
  - Fix minor security issue in the way login information was cached in cookies and the session.
  - Simplify rules around alias editing/generation in fillparams. 
    If the alias field exists then we can adjust its value or recalculate an alias.
    Use basic properties, and ownership and permissions to determine if that field exists on the edit form.
  - Minor fixes to the CmsJobManager.


Version 2.2.4 - Little Paradise
----------------------------------
Core - General
  - Improvements to the Hook class.
  - Minor fix to usertagoperations.
  - Changes to the hierarchy selector to disallow circular references.
  - Fix problems with additional editors causing page aliases to be regenerated.
  - Minor fixes to Admin log browser.
  - Minor fixes to Admin login.
  - Add missing call Core::LoginPre hook.
  - Modify myaccount.php to call Core::EditUserPre hook BEFORE the password is set.
  - Fix documentation to CallUserTag.