@@ -4,6 +4,7 @@ Core - General
   - Change internal CSRF variable name
   - Fix object insertion bug via deserialize in LoginOperations 
   - Fix issue where login cookie contents could be forged by determining the hashing salt
+  - Refactor the mechanism for generating and verifying admin account password reset codes.
 
 FileManager v1.6.6
   - No longer allow uploading files with names that end in .
